k8s/ecommerce-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: ecommerce-deployment
spec:
  replicas: 7
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
       - name: django
         image: us-central1-docker.pkg.dev/extended-cinema-334708/image-repo/shopping:v1
         ports:
          - containerPort: 9001
         imagePullPolicy: Always
