k8s/pod-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jobpod
spec:
  containers:
   - name: podjango
     image: us-central1-docker.pkg.dev/extended-cinema-334708/image-repo/shopping:v1
     ports:
      - containerPort: 9001
     imagePullPolicy: Always
     command:
      - bash
      - -c
      - python3 manage.py makemigrations  &&
        python3 manage.py migrate
  restartPolicy: OnFailure
