k8s/postgress-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deployment
spec:
  serviceName: "postgres"
  replicas: 3
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-pvc-volums
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
