k8s/sql-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: sql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      database: mysql
  template:
    metadata:
      labels:
        database: mysql
    spec:
      volumes:
       - name: sql-volumes
         persistentVolumeClaim:
           claimName: pvc-volumes
       
      
      containers:
       - name: db
         image: us-central1-docker.pkg.dev/extended-cinema-334708/image-repo/shoppingdb:v1
         ports:
          - containerPort: 3306
         imagePullPolicy: Always
