k8s/ecommerce-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
   - port: 9001
     targetPort: 9001
