k8s/ingress-ecommerce.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-ecommerce
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
spec:
  rules:
   - http:
       paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: ecommerce-cluster-ip
              port:
                number: 9001
